error_templates/java/test_files/bracket_mismatch_error/test.txt
template: "Java.BracketMismatchError"
---
BracketMismatch.java:7: error: '}' expected
        System.out.println("x is greater than 5.");
        ^
1 error
===
template: "Java.BracketMismatchError"
---
# BracketMismatchError
This error occurs because there is a missing closing bracket for the if statement.

## Steps to fix
### Add Missing Bracket
Add a closing bracket '}' after the `System.out.println` statement.
```diff
            System.out.println("x is greater than 5.");
+       }
```

### Remove Excessive Bracket
If you accidentally added an extra closing bracket '}' at the end, remove it.
```diff
        }  // Remove this line if it's an extra bracket
```
